[package]
name = "proj-405"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wio_terminal = { path = "/Volumes/Repos/atsamd/boards/wio_terminal" }
panic-halt = "0.2.0"
embedded-graphics = "0.7.1"
cortex-m = "0.7.4"
#cortex-m-rtic = { git = "https://github.com/rtic-rs/cortex-m-rtic.git" }
cortex-m-rtic = { path = "/Volumes/Repos/cortex-m-rtic" }
embedded-hal = "1.0.0-alpha.7"
arrayvec = { version = "~0.5.2", default-features = false }
heapless = "0.7.10"
ssmarshal = { version = "~1.0", default-features = false }
systick-monotonic = "1.0.0"
#lazy_static = "1.4.0"
embedded-text = "0.5.0"
micromath = "2.0.0"